@@ -1,0 +1,551 @@
+begin_unit|revision:1.0.0;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/*****************************************************************  *   Licensed to the Apache Software Foundation (ASF) under one  *  or more contributor license agreements.  See the NOTICE file  *  distributed with this work for additional information  *  regarding copyright ownership.  The ASF licenses this file  *  to you under the Apache License, Version 2.0 (the  *  "License"); you may not use this file except in compliance  *  with the License.  You may obtain a copy of the License at  *  *    http://www.apache.org/licenses/LICENSE-2.0  *  *  Unless required by applicable law or agreed to in writing,  *  software distributed under the License is distributed on an  *  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY  *  KIND, either express or implied.  See the License for the  *  specific language governing permissions and limitations  *  under the License.  ****************************************************************/
+end_comment
+
+begin_package
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+package|;
+end_package
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|CountDownLatch
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|ExecutorService
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|Executors
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|Future
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|TimeUnit
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|di
+operator|.
+name|Inject
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|testdo
+operator|.
+name|testmap
+operator|.
+name|Artist
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|unit
+operator|.
+name|di
+operator|.
+name|server
+operator|.
+name|CayenneProjects
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|unit
+operator|.
+name|di
+operator|.
+name|server
+operator|.
+name|ServerCase
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|unit
+operator|.
+name|di
+operator|.
+name|server
+operator|.
+name|UseServerRuntime
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|util
+operator|.
+name|Util
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|Logger
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|LoggerFactory
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertTrue
+import|;
+end_import
+
+begin_comment
+comment|/**  * @since 4.1  */
+end_comment
+
+begin_class
+annotation|@
+name|UseServerRuntime
+argument_list|(
+name|CayenneProjects
+operator|.
+name|TESTMAP_PROJECT
+argument_list|)
+specifier|public
+class|class
+name|DataContextConcurrencyIT
+extends|extends
+name|ServerCase
+block|{
+specifier|private
+specifier|static
+specifier|final
+name|Logger
+name|logger
+init|=
+name|LoggerFactory
+operator|.
+name|getLogger
+argument_list|(
+name|DataContextConcurrencyIT
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+annotation|@
+name|Inject
+specifier|private
+name|ObjectContext
+name|context
+decl_stmt|;
+comment|/**      * see https://issues.apache.org/jira/browse/CAY-2382      *      * This test is probabilistic as it tries to catch concurrency problem.      * It can be false-negative (e.g. Travis build not always fails)      */
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testCMEInContextSerialization
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// add some content to context, so it will be serializing slowly
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|1000
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Artist
+name|artist
+init|=
+name|context
+operator|.
+name|newObject
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|artist
+operator|.
+name|setArtistName
+argument_list|(
+literal|"name "
+operator|+
+name|i
+argument_list|)
+expr_stmt|;
+block|}
+comment|// add some barriers so threads will try to start synchronously
+name|CountDownLatch
+name|startSignal
+init|=
+operator|new
+name|CountDownLatch
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
+name|CountDownLatch
+name|serializationStartSignal
+init|=
+operator|new
+name|CountDownLatch
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
+name|ExecutorService
+name|service
+init|=
+name|Executors
+operator|.
+name|newFixedThreadPool
+argument_list|(
+literal|2
+argument_list|)
+decl_stmt|;
+comment|// this task will modify context
+name|Future
+argument_list|<
+name|Boolean
+argument_list|>
+name|resultObjectCreation
+init|=
+name|service
+operator|.
+name|submit
+argument_list|(
+parameter_list|()
+lambda|->
+block|{
+try|try
+block|{
+comment|// this thread will start when context serialized at least once,
+comment|// as it should be faster (but who knows...)
+name|serializationStartSignal
+operator|.
+name|await
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|1000
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Artist
+name|artist
+init|=
+name|context
+operator|.
+name|newObject
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|context
+operator|.
+name|deleteObject
+argument_list|(
+name|artist
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+literal|true
+return|;
+block|}
+argument_list|)
+decl_stmt|;
+comment|// this task will serialize context
+name|Future
+argument_list|<
+name|Boolean
+argument_list|>
+name|resultSerialization
+init|=
+name|service
+operator|.
+name|submit
+argument_list|(
+parameter_list|()
+lambda|->
+block|{
+try|try
+block|{
+comment|// wait for outer thread start this one
+name|startSignal
+operator|.
+name|await
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|100
+condition|;
+name|i
+operator|++
+control|)
+block|{
+try|try
+block|{
+comment|// make one serialization, before starting modifying thread
+name|Util
+operator|.
+name|cloneViaSerialization
+argument_list|(
+name|context
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|i
+operator|==
+literal|0
+condition|)
+block|{
+name|serializationStartSignal
+operator|.
+name|countDown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|logger
+operator|.
+name|error
+argument_list|(
+literal|"Serialization failed"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+return|return
+literal|false
+return|;
+block|}
+block|}
+return|return
+literal|true
+return|;
+block|}
+argument_list|)
+decl_stmt|;
+comment|// make sure that everyone are ready
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|10
+argument_list|)
+expr_stmt|;
+name|startSignal
+operator|.
+name|countDown
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|resultObjectCreation
+operator|.
+name|get
+argument_list|(
+literal|20
+argument_list|,
+name|TimeUnit
+operator|.
+name|SECONDS
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|resultSerialization
+operator|.
+name|get
+argument_list|(
+literal|20
+argument_list|,
+name|TimeUnit
+operator|.
+name|SECONDS
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_class
+
+end_unit
+
